# passman-rs

./: .gitignore  .passman-db  Cargo.toml  README.md
docs/: crates.js  index.html  search-index.js  source-files.js
docs/implementors/core/convert/: trait.From.js
docs/implementors/core/fmt/: trait.Debug.js  trait.Display.js
docs/implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
docs/implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
docs/implementors/std/error/: trait.Error.js
docs/implementors/structopt/: trait.StructOpt.js
docs/main/: all.html  enum.Cli.html  fn.main.html  index.html  sidebar-items.js
docs/passman/: all.html  enum.ErrorKind.html  fn.genpass.html  index.html  sidebar-items.js  struct.Config.html  struct.Error.html  struct.PassMan.html
docs/passman/config/: struct.Config.html
docs/passman/error/: enum.ErrorKind.html  struct.Error.html
docs/src/main/: main.rs.html
docs/src/passman/: config.rs.html  error.rs.html  lib.rs.html
main/: Cargo.toml
main/src/: main.rs
passman/: Cargo.toml
passman/src/: config.rs  error.rs  lib.rs
src/: main.rs  passman.rs
