[package]
name = "passman"
version = "0.1.0"
edition = "2018"

[lib]
name = "passman"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
serde = {version = "^1.0.63", features = ["derive"]}
rand = "0.8.4"
bincode_aes = "1.0.1"
rust-crypto = "0.2.36"